--- a/.gitattributes
+++ b/.gitattributes
@@ -18,3 +18,4 @@
 
 Android_App/Delivery/* linguist-vendored
 Android_App/App%20Design/* linguist-vendored
+Maze%20Runner/Iteration%20%235/doc/* linguist-vendored
