--- a/.gitattributes
+++ b/.gitattributes
@@ -17,5 +17,4 @@
 *.RTF	 diff=astextplain
 
 Android_App/Delivery/* linguist-vendored
-Android_App/App%20Design/* linguist-vendored
-Maze%20Runner/Iteration%20%235/doc/* linguist-vendored
+Maze_Runner/Iteration_5/doc/* linguist-vendored
